Changed the 2DL4 reference to the one in KP420446 (https://www.ncbi.nlm.nih.gov/nuccore/KP420446). It is 2000 bp longer than before: 1000 on each end of the gene.

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:latest
 MAINTAINER Dave Roe <droe@nmdp.org>
 
+# todo: htsjdk
+
 # install stuff
 RUN apt-get update && apt-get install -qyy bwa curl git make \
      unzip samtools maven subversion gzip \
